--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.9.25",
+    "@firebase/auth": "^1.5.1",
+    "@firebase/firestore": "^4.4.0",
+    "luxon": "^3.4.4",
+    "next": "14.0.4",
     "react": "^18",
+    "react-calendar": "^4.7.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dropdown": "^1.11.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/luxon": "^3.3.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5"
   }
 }
