--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -11,9 +11,12 @@ jobs:
   trigger-webhook:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Hello world action
-        with: # Set the secret as an input
-          WEBHOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK   }}
+        run: echo "Hello World"
+        env:
+          WEBHOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK }}
       - name: Trigger Webhook
         run: |
           curl -X GET "$WEBHOOK_URL"
