--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -2,7 +2,7 @@ name: Rebuild site (cron)
 
 on:
   schedule:
-    - cron: "0 20 * * *"
+    - cron: "0 * * * *"
   #push:
   #  branches:
   #    - main
