--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -2,10 +2,7 @@ name: Rebuild site (cron)
 
 on:
   schedule:
-    - cron: "0 * * * *"
-  #push:
-  #  branches:
-  #    - main
+    - cron: "0 20 * * *"
 
 jobs:
   trigger-webhook:
