--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@firebase/auth": "^1.5.1",
     "@firebase/firestore": "^4.4.0",
     "chart.js": "^4.4.2",
+    "file-saver": "^2.0.5",
     "luxon": "^3.4.4",
     "next": "14.0.4",
     "react": "^18",
@@ -23,6 +24,7 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/luxon": "^3.3.7",
     "@types/node": "^20",
     "@types/react": "^18",
