--- a/.github/workflows/cronjob.yaml
+++ b/.github/workflows/cronjob.yaml
@@ -2,7 +2,8 @@ name: Rebuild site (cron)
 
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    # - cron: "*/10 * * * *" # Every 10 minutes
+    - cron: "0 0 * * *" # Every day at 00:00
 
 jobs:
   trigger-webhook:
