--- a/.github/workflows/cronjob_hourly.yaml
+++ b/.github/workflows/cronjob_hourly.yaml
@@ -1,8 +1,8 @@
-name: Rebuild site (cron)
+name: Rebuild site
 
 on:
   schedule:
-    - cron: "*/20 * * * *" # Every 20 minutes
+    - cron: "35 * * * *" # Every 20 minutes
     # - cron: "0 0 * * *" # Every day at 00:00 (UTC)
 
   workflow_dispatch:
